examples/resolver/primitives/fail/write_argument_types.axo
const status = write(1)
print(status)
